--- a/ss3_views_thymeleaf/bai_tap/product_management/src/main/webapp/WEB-INF/views/layout.html
+++ b/ss3_views_thymeleaf/bai_tap/product_management/src/main/webapp/WEB-INF/views/layout.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Spring Customer</title>
+    <title>Spring Product</title>
 
     <style type="text/css">
         h3{background-color: blue; color: white; padding: 10px 0 10px 20px;}
@@ -65,6 +65,9 @@
             border-radius: 5px;
             background-color: #f2f2f2;
             padding: 20px;
+        }
+        th,td {
+            padding: 15px;
         }
 
         .notify span{font-size: 15px; color: blue;}
