--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/views/create.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/views/create.html
@@ -2,33 +2,36 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Edit Product</title>
+    <title>create</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+          crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
 </head>
 <body>
 
-<h1>Edit Blog</h1>
-<form action="/edit" method="post" th:object="${blog}">
+
+<h1>Create new Blog</h1>
+<form action="/create" method="post" th:object="${blog}">
     <table border="1">
-        <tbody>
-        <input type="hidden" th:field="*{id}" th:value="${blog.id}">
         <tr>
             <td>Name</td>
-            <td><input type="text" th:field="*{nameBlog}" th:value="${blog.nameBlog}"></td>
+            <td><input type="text" th:field="*{name}" ></td>
         </tr>
         <tr>
             <td>Content</td>
-            <td><input type="text" th:field="*{content}" th:value="${blog.content}"></td>
+            <td><input type="text" th:field="*{content}" ></td>
         </tr>
-
-        </tbody>
+        <tr>
+            <td>
+                <input type="submit" value="Register"/>
+            </td>
+        </tr>
     </table>
-    <input type="submit" value="Edit "/>
 </form>
+<br>
+<a th:href="@{/list}">Back to list</a>
 
 </body>
-</html>
