--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/views/edit.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/views/edit.html
@@ -13,22 +13,32 @@
 
 <h1>Edit Blog</h1>
 <form action="/edit" method="post" th:object="${blog}">
-    <table border="1">
-        <tbody>
-        <input type="hidden" th:field="*{id}" th:value="${blog.id}">
-        <tr>
-            <td>Name</td>
-            <td><input type="text" th:field="*{nameBlog}" th:value="${blog.nameBlog}"></td>
-        </tr>
-        <tr>
-            <td>Content</td>
-            <td><input type="text" th:field="*{content}" th:value="${blog.content}"></td>
-        </tr>
-
-        </tbody>
-    </table>
-    <input type="submit" value="Edit "/>
+    <input type="hidden" th:field="*{id}">
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>Name</label>
+            <input type="text"  class="form-control" name="name" placeholder="Name" th:field="*{nameBlog}">
+        </div>
+        <div class="form-group col-md-6">
+            <label>Content</label>
+            <input type="text" class="form-control" name="content" placeholder="Content" th:field="*{content}">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <label>Year</label>
+            <input type="date" class="form-control" name="year" th:field="*{year}" >
+        </div>
+        <div class="form-group col-md-6">
+            <label style="">Category</label>
+            <select class="form-control" th:field="*{category}">
+                <option th:each="category : ${category}" th:text="${category.nameBlog}" th:value="${category.id}"></option>
+            </select>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-warning">Edit</button>
 </form>
+
 
 </body>
 </html>
