--- a/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/views/list.html
+++ b/ss7_spring_data_repository/bai_tap/blog/src/main/resources/templates/views/list.html
@@ -10,28 +10,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"></script>
+    <style>
+        table {
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
 <h1>Blog List</h1>
-<table>
+<form th:action="@{/list/search}" method="get">
+    <div>
+        <label>Name :</label>
+        <input type="text" name="name" >
+        <button type="submit" value="search"  class="btn btn-primary"  >Search</button>
+    </div>
+    <div>
+        <a th:href="@{/create}" class="btn btn-success">Create post blog </a>
+    </div>
+</form>
+<table class="w3-table-all w3-hoverable">
+    <legend style="text-align: center">Blog</legend>
+    <thead>
     <tr>
         <th>ID</th>
         <th>Name Blog</th>
         <th>Content</th>
+        <th>Year</th>
+        <th>Category</th>
         <th>View</th>
         <th>Edit</th>
         <th>Delete</th>
     </tr>
+    </thead>
+    <tbody>
     <tr th:each="blog: ${blogList}">
         <td th:text="${blog.id}"></td>
         <td th:text="${blog.nameBlog}"></td>
         <td th:text="${blog.content}"></td>
-        <td><a th:href="@{/views/{id}(id=${blog.id})}"/>view</td>
-        <td><a th:href="@{/delete/{id}(id=${blog.id})}"/>delete</td>
-        <td><a th:href="@{/edit/{id}(id=${blog.id})}"/>edit</td>
+        <td th:text="${blog.year}"></td>
+        <td th:text="${blog.category.nameBlog}"></td>
+        <td><a class="btn btn-info" th:href="@{/views/{id}(id=${blog.id})}"/>view</td>
+        <td><a class="btn btn-danger" th:href="@{/delete/{id}(id=${blog.id})}"/>delete</td>
+        <td><a class="btn btn-warning" th:href="@{/edit/{id}(id=${blog.id})}"/>edit</td>
     </tr>
+    <tbody>
 </table>
-
+<div>
+    <a th:href="@{/list/search(name=${name},page=${blogList.number-1})}"
+       th:if="${blogList.hasPrevious()}">
+        <span>Previous</span>
+    </a>
+    <span th:each="pageNo:${#numbers.sequence(1,blogList.totalPages)}">
+        <a th:href="@{/list/search(name=${name}, page = ${pageNo} - 1)}" th:text="${pageNo}"></a>
+    </span>
+    <a th:href="@{/list/search(name=${name},page=${blogList.number+1})}"
+       th:if="${blogList.hasNext()}">
+        <span>Next</span>
+    </a>
+</div>
 
 </body>
 </html>
