--- a/ss8_validation/bai_tap/form/src/main/resources/templates/list.html
+++ b/ss8_validation/bai_tap/form/src/main/resources/templates/list.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
-<a th:href="@{/create}"><button>Create</button></a>
+<a th:href="@{/create}">
+    <button>Create</button>
+</a>
 <div style="margin: 0px 100px 0px 100px " class="w3-container">
     <table class="w3-table-all w3-hoverable">
         <thead>
@@ -24,13 +26,11 @@
         <tbody>
         <tr th:each="user : ${userList}">
             <td style="width:8%" th:text="${user.id}"></td>
-            <td style="width:15%"th:text="${user.firstName}"></td>
+            <td style="width:15%" th:text="${user.firstName}"></td>
             <td style="width:15%" th:text="${user.lastName}"></td>
             <td style="width:20%" th:text="${user.phone}"></td>
             <td style="width:12%" th:text="${user.age}"></td>
             <td style="width:12%" th:text="${user.email}"></td>
-
-
         </tr>
         </tbody>
     </table>
